syntax = "proto3";

package com.yjy.data.datastore.proto;

option java_package = "com.yjy.data.datastore.proto";
option java_multiple_files = true;

message ChallengePreferences {
    int64 time_diff = 1;
    repeated string completed_challenge_titles = 2;
}
